added analysis of vacancy (waiting time) to convergence analysis notebook

--- a/Convergence_Analysis.ipynb
+++ b/Convergence_Analysis.ipynb
@@ -251,33 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n",
-      "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if __name__ == '__main__':\n",
-      "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  # Remove the CWD from sys.path while we load stuff.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -309,107 +285,178 @@
        "      <th>CumulativeOccupancy</th>\n",
        "      <th>CumulativeMean</th>\n",
        "      <th>ShiftedOcc</th>\n",
-       "      <th>deltaOcc</th>\n",
-       "      <th>Nruns</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Occupancy.Shifted</th>\n",
+       "      <th>Occupancy.delta</th>\n",
+       "      <th>Occupancy.Nruns</th>\n",
+       "      <th>Occupancy.CumulativeMean</th>\n",
+       "      <th>Vacancy</th>\n",
+       "      <th>Vacancy.Accumulation</th>\n",
+       "      <th>Vacancy.Shifted</th>\n",
+       "      <th>Vacancy.delta</th>\n",
+       "      <th>Vacancy.Nruns</th>\n",
+       "      <th>Vacancy.CumulativeMean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4918</th>\n",
-       "      <td>1584</td>\n",
-       "      <td>1</td>\n",
+       "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>3365</td>\n",
-       "      <td>1310</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4236</td>\n",
+       "      <td>2528</td>\n",
        "      <td>AA</td>\n",
-       "      <td>950.4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4236</td>\n",
+       "      <td>2528</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5085</th>\n",
-       "      <td>1751</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3365</td>\n",
-       "      <td>1310</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1050.6</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4236</td>\n",
+       "      <td>2528</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5322</th>\n",
-       "      <td>1988</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3365</td>\n",
-       "      <td>1310</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1192.8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.8</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5326</th>\n",
-       "      <td>1992</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3365</td>\n",
-       "      <td>1310</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1195.2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5327</th>\n",
-       "      <td>1993</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3365</td>\n",
-       "      <td>1310</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1195.8</td>\n",
-       "      <td>5</td>\n",
+       "      <td>True</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4236</td>\n",
+       "      <td>2528</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4236</td>\n",
+       "      <td>2528</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Frame  Occupancy  Rep  ResID  SeqID SimType    Time  \\\n",
-       "4918   1584          1    0   3365   1310      AA   950.4   \n",
-       "5085   1751          1    0   3365   1310      AA  1050.6   \n",
-       "5322   1988          1    0   3365   1310      AA  1192.8   \n",
-       "5326   1992          1    0   3365   1310      AA  1195.2   \n",
-       "5327   1993          1    0   3365   1310      AA  1195.8   \n",
+       "   Frame  Occupancy  Rep  ResID  SeqID SimType  Time  CumulativeOccupancy  \\\n",
+       "0      0          0    0   4236   2528      AA   0.0                    0   \n",
+       "1      1          0    0   4236   2528      AA   0.6                    0   \n",
+       "2      2          0    0   4236   2528      AA   1.2                    0   \n",
+       "3      3          0    0   4236   2528      AA   1.8                    0   \n",
+       "4      4          0    0   4236   2528      AA   2.4                    0   \n",
        "\n",
-       "      CumulativeOccupancy  CumulativeMean  ShiftedOcc  deltaOcc  Nruns  \n",
-       "4918                    1             0.6         0.0     False    1.0  \n",
-       "5085                    2             1.2         0.0     False    1.0  \n",
-       "5322                    3             1.8         0.0     False    1.0  \n",
-       "5326                    4             2.4         0.0     False    1.0  \n",
-       "5327                    5             3.0         1.0     False    1.0  "
+       "   CumulativeMean  ShiftedOcc  ...  Occupancy.Shifted  Occupancy.delta  \\\n",
+       "0             0.0         NaN  ...                0.0            False   \n",
+       "1             0.0         0.0  ...                0.0            False   \n",
+       "2             0.0         0.0  ...                0.0            False   \n",
+       "3             0.0         0.0  ...                0.0            False   \n",
+       "4             0.0         0.0  ...                0.0            False   \n",
+       "\n",
+       "   Occupancy.Nruns  Occupancy.CumulativeMean  Vacancy  Vacancy.Accumulation  \\\n",
+       "0              1.0                       0.0     True                   1.0   \n",
+       "1              1.0                       0.0     True                   2.0   \n",
+       "2              1.0                       0.0     True                   3.0   \n",
+       "3              1.0                       0.0     True                   4.0   \n",
+       "4              1.0                       0.0     True                   5.0   \n",
+       "\n",
+       "   Vacancy.Shifted  Vacancy.delta  Vacancy.Nruns Vacancy.CumulativeMean  \n",
+       "0                0           True            1.0                    0.6  \n",
+       "1             True          False            1.0                    1.2  \n",
+       "2             True          False            1.0                    1.8  \n",
+       "3             True          False            1.0                    2.4  \n",
+       "4             True          False            1.0                    3.0  \n",
+       "\n",
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,25 +465,81 @@
     "groupingCols=['ResID','SeqID','Rep','SimType']\n",
     "with pd.option_context('mode.use_inf_as_null',True):\n",
     "    analysisData=joint_occupancy_data\n",
-    "    analysisData['CumulativeOccupancy']=analysisData.groupby(groupingCols).Occupancy.cumsum()\n",
-    "    analysisData['deltaOcc']=analysisData.Occupancy-analysisData.ShiftedOcc\n",
-    "    analysisData['deltaOcc']=analysisData['deltaOcc']<0\n",
-    "    analysisData=analysisData.dropna()\n",
-    "    analysisData['Nruns']=analysisData.groupby(groupingCols).deltaOcc.cumsum()\n",
-    "    analysisData['Nruns']=analysisData['Nruns'].map(lambda x: np.max([x,1.0]))\n",
-    "    analysisData['CumulativeMean']=aaFrameRate*analysisData.CumulativeOccupancy/analysisData.Nruns\n",
+    "    runType='Occupancy'\n",
+    "    analysisData[runType+'.Accumulation']=analysisData.groupby(\n",
+    "        groupingCols)[runType].cumsum()\n",
+    "    analysisData[runType+'.Shifted']=analysisData[runType].shift(1)\n",
+    "    analysisData[runType+'.Shifted']=analysisData[runType+'.Shifted'].map(\n",
+    "        lambda x: x if np.isfinite(x) else 0)\n",
+    "    analysisData[runType+'.delta']=analysisData[runType] - \\\n",
+    "        analysisData[runType+'.Shifted']\n",
+    "    analysisData[runType+'.delta']=analysisData[runType+'.delta'].map(\n",
+    "        lambda x: x if np.isfinite(x) else 0)\n",
+    "    analysisData[runType+'.delta']=analysisData[runType+'.delta']>0\n",
+    "    #analysisData=analysisData.dropna()\n",
+    "    analysisData[runType+'.Nruns']=analysisData.groupby(\n",
+    "        groupingCols)[runType+'.delta'].cumsum()\n",
+    "    analysisData[runType+'.Nruns']=analysisData[runType+'.Nruns'].map(\n",
+    "        lambda x: np.max([x-2,1.0]))\n",
+    "    analysisData[runType+'.CumulativeMean']=aaFrameRate * \\\n",
+    "        analysisData[runType+'.Accumulation'] / \\\n",
+    "        analysisData[runType+'.Nruns']\n",
+    "    \n",
+    "    runType='Vacancy'\n",
+    "    analysisData[runType]=analysisData.Occupancy==0\n",
+    "    analysisData[runType+'.Accumulation']=analysisData.groupby(\n",
+    "        groupingCols)[runType].cumsum()\n",
+    "    analysisData[runType+'.Shifted']=analysisData[runType].shift(1)\n",
+    "    analysisData[runType+'.Shifted']=analysisData[runType+'.Shifted'].map(\n",
+    "        lambda x: x if np.isfinite(x) else 0)\n",
+    "    analysisData[runType+'.delta']=analysisData[runType] - \\\n",
+    "        analysisData[runType+'.Shifted']\n",
+    "    analysisData[runType+'.delta']=analysisData[runType+'.delta'].map(\n",
+    "        lambda x: x if np.isfinite(x) else 0)\n",
+    "    analysisData[runType+'.delta']=analysisData[runType+'.delta']>0\n",
+    "    #analysisData=analysisData.dropna()\n",
+    "    analysisData[runType+'.Nruns']=analysisData.groupby(\n",
+    "        groupingCols)[runType+'.delta'].cumsum()\n",
+    "    analysisData[runType+'.Nruns']=analysisData[runType+'.Nruns'].map(\n",
+    "        lambda x: np.max([x-2,1.0]))\n",
+    "    analysisData[runType+'.CumulativeMean']=aaFrameRate * \\\n",
+    "        analysisData[runType+'.Accumulation'] / \\\n",
+    "        analysisData[runType+'.Nruns']\n",
     "analysisData.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([u'Frame', u'Occupancy', u'Rep', u'ResID', u'SeqID', u'SimType', u'Time',\n",
+      "       u'CumulativeOccupancy', u'CumulativeMean', u'ShiftedOcc', u'deltaOcc',\n",
+      "       u'Nruns', u'Occupancy.Accumulation', u'Occupancy.Shifted',\n",
+      "       u'Occupancy.delta', u'Occupancy.Nruns', u'Occupancy.CumulativeMean',\n",
+      "       u'Vacancy', u'Vacancy.Accumulation', u'Vacancy.Shifted',\n",
+      "       u'Vacancy.delta', u'Vacancy.Nruns', u'Vacancy.CumulativeMean'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print analysisData.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb1af0557e904718aca26729e752720d",
+       "model_id": "127d36e721c24fb7b7ed0141c61d628e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -450,14 +553,45 @@
    ],
    "source": [
     "@interact\n",
-    "def plot_cumMeans(resid=analysisData.ResID.unique(),\n",
-    "                  simType=analysisData.SimType.unique()):\n",
+    "def plot_cumMeans(resid=analysisData[analysisData.CumulativeOccupancy>0].ResID.unique(),\n",
+    "                  simType=analysisData.SimType.unique(),\n",
+    "                  show_occ_mean=widgets.ToggleButton(description='Occupancy_Mean',\n",
+    "                                                     value=True),\n",
+    "                  show_occ_nruns=widgets.ToggleButton(description='Occupancy_Runs'),\n",
+    "                  show_occ_accrued=widgets.ToggleButton(description='Occupancy_Accrued'),\n",
+    "                  show_vac_mean=widgets.ToggleButton(description='Vacancy_Mean'),\n",
+    "                  show_vac_nruns=widgets.ToggleButton(description='Vacancy_Runs'),\n",
+    "                  show_vac_accrued=widgets.ToggleButton(description='Vacancy_Accrued'),\n",
+    "                 ):\n",
     "    tempData=analysisData[(analysisData.ResID==resid) & \\\n",
     "                          (analysisData.SimType==simType)]\n",
+    "    plt.figure(figsize=(12,9))\n",
     "    for rep in tempData.Rep.unique():\n",
     "        plotData=tempData[tempData.Rep==rep]\n",
-    "        plt.plot(plotData.Time,plotData.CumulativeMean,\n",
-    "                 label=rep)\n",
+    "        if show_occ_mean:\n",
+    "            plt.plot(plotData.Time,\n",
+    "                     plotData['Occupancy.CumulativeMean'],\n",
+    "                 label='occupancy_mean',c='green')\n",
+    "        if show_occ_accrued:\n",
+    "            plt.plot(plotData.Time,\n",
+    "                        np.array(plotData['Occupancy.Accumulation'],dtype=float),\n",
+    "                     label='occupancy_occ',c='yellow')\n",
+    "        if show_occ_nruns:\n",
+    "            plt.plot(plotData.Time,\n",
+    "                     plotData['Occupancy.Nruns'],c='cyan',\n",
+    "                     label='occupancy_nruns')\n",
+    "        if show_vac_mean:\n",
+    "            plt.plot(plotData.Time,\n",
+    "                     plotData['Vacancy.CumulativeMean'],\n",
+    "                 label='vacancy_mean',c='magenta')\n",
+    "        if show_vac_accrued:\n",
+    "            plt.plot(plotData.Time,\n",
+    "                        np.array(plotData['Vacancy.Accumulation'],dtype=float),\n",
+    "                     label='vacancy_occ',c='red')\n",
+    "        if show_vac_nruns:\n",
+    "            plt.plot(plotData.Time,\n",
+    "                     plotData['Vacancy.Nruns'],c='blue',\n",
+    "                     label='vacancy_nruns')\n",
     "    plt.legend()\n",
     "    plt.show()"
    ]
