Saved convergence analysis data

--- a/Convergence_Analysis.ipynb
+++ b/Convergence_Analysis.ipynb
@@ -510,25 +510,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analysisData.to_csv(baseDir+'/'+'Convergence_Analysis_Data.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The convergence data table is huge, so we need to split it into chunks\n",
+    "os.system(\"split -l 100000 \"+\\\n",
+    "          baseDir+'/'+\"Convergence_Analysis_Data.csv \"+\\\n",
+    "          baseDir+'/'+\"Convergence_Analysis_Data.chunk.\")\n",
+    "os.system(\"rm \"+baseDir+'/'+\"Convergence_Analysis_Data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Reading convergence data chunks\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ff46231b23d74442831b3d7ef4230300",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style=u'info', max=1), HTML(value=u'')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "convergence occupancy file header:\n",
       "Index([u'Frame', u'Occupancy', u'Rep', u'ResID', u'SeqID', u'SimType', u'Time',\n",
       "       u'CumulativeOccupancy', u'CumulativeMean', u'ShiftedOcc', u'deltaOcc',\n",
       "       u'Nruns', u'Occupancy.Accumulation', u'Occupancy.Shifted',\n",
       "       u'Occupancy.delta', u'Occupancy.Nruns', u'Occupancy.CumulativeMean',\n",
       "       u'Vacancy', u'Vacancy.Accumulation', u'Vacancy.Shifted',\n",
       "       u'Vacancy.delta', u'Vacancy.Nruns', u'Vacancy.CumulativeMean'],\n",
-      "      dtype='object')\n"
+      "      dtype='object')\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print analysisData.columns"
+    "ConvergenceFileBase=\"Convergence_Analysis_Data.chunk.\"\n",
+    "convergenceFrameRate=1.0\n",
+    "\n",
+    "ConvergenceFileList=[fileName for fileName in \\\n",
+    "                     os.listdir(baseDir) if \\\n",
+    "                     ConvergenceFileBase in fileName]\n",
+    "#print ConvergenceFileList\n",
+    "ConvergenceChunks=[]\n",
+    "print 'Reading convergence data chunks'\n",
+    "convergenceColumns=[]\n",
+    "for iFile,fileName in tqdm.tqdm_notebook(enumerate(ConvergenceFileList)):\n",
+    "    if 'chunk.aa' in fileName:\n",
+    "        ConvergenceChunks.append(pd.read_csv('/'.join([baseDir,fileName])))\n",
+    "        print \"convergence occupancy file header:\"\n",
+    "        convergenceColumns=ConvergenceChunks[iFile].columns\n",
+    "        print convergenceColumns\n",
+    "    else:\n",
+    "        ConvergenceChunks.append(pd.read_csv('/'.join([baseDir,fileName]),\n",
+    "            header=None))\n",
+    "for convergenceFrame in ConvergenceChunks:\n",
+    "    convergenceFrame.columns=convergenceColumns\n",
+    "convergence_data=pd.concat(ConvergenceChunks)\n",
+    "del(ConvergenceChunks)\n",
+    "convergence_data.Time=convergence_data.Frame*convergenceFrameRate\n",
+    "convergence_data['Rep']=0\n",
+    "convergence_data['SimType']='convergence'\n",
+    "print convergence_data.head()\n",
+    "gc.collect()"
    ]
   },
   {
@@ -553,7 +636,7 @@
    ],
    "source": [
     "@interact\n",
-    "def plot_cumMeans(resid=analysisData[analysisData.CumulativeOccupancy>0].ResID.unique(),\n",
+    "def plot_cumMeans(resid=analysisData[analysisData['Occupancy.Accumulation']>0].ResID.unique(),\n",
     "                  simType=analysisData.SimType.unique(),\n",
     "                  show_occ_mean=widgets.ToggleButton(description='Occupancy_Mean',\n",
     "                                                     value=True),\n",
