Added more comments / headers to convergence analysis

--- a/Convergence_Analysis.ipynb
+++ b/Convergence_Analysis.ipynb
@@ -39,7 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load Occupancy Data"
+    "# Load Occupancy Data\n",
+    "\n",
+    "If you are just trying to view pre-generated convergence data, then skip this section and go to the 'Load Convergence Data' Section"
    ]
   },
   {
@@ -542,8 +544,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load Convergence Data\n",
+    "\n",
+    "You can start here if you only need to view pre-generated convergence data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -579,11 +590,58 @@
       "       u'Vacancy', u'Vacancy.Accumulation', u'Vacancy.Shifted',\n",
       "       u'Vacancy.delta', u'Vacancy.Nruns', u'Vacancy.CumulativeMean'],\n",
       "      dtype='object')\n",
-      "\n"
+      "\n",
+      "   Frame  Occupancy  Rep  ResID  SeqID      SimType    Time  \\\n",
+      "0   9482          0    0   2330   2040  convergence  9482.0   \n",
+      "1   9483          0    0   2330   2040  convergence  9483.0   \n",
+      "2   9484          1    0   2330   2040  convergence  9484.0   \n",
+      "3   9485          1    0   2330   2040  convergence  9485.0   \n",
+      "4   9486          0    0   2330   2040  convergence  9486.0   \n",
+      "\n",
+      "   CumulativeOccupancy  CumulativeMean  ShiftedOcc  ...  Occupancy.Shifted  \\\n",
+      "0                 4391        1.855352         1.0  ...                1.0   \n",
+      "1                 4391        1.855352         0.0  ...                0.0   \n",
+      "2                 4392        1.855775         0.0  ...                0.0   \n",
+      "3                 4393        1.856197         1.0  ...                1.0   \n",
+      "4                 4393        1.854891         1.0  ...                1.0   \n",
+      "\n",
+      "   Occupancy.delta  Occupancy.Nruns  Occupancy.CumulativeMean  Vacancy  \\\n",
+      "0            False           1420.0                  1.855352     True   \n",
+      "1            False           1420.0                  1.855352     True   \n",
+      "2             True           1421.0                  1.854469    False   \n",
+      "3            False           1421.0                  1.854891    False   \n",
+      "4            False           1421.0                  1.854891     True   \n",
+      "\n",
+      "   Vacancy.Accumulation  Vacancy.Shifted  Vacancy.delta  Vacancy.Nruns  \\\n",
+      "0                5092.0            False           True         1420.0   \n",
+      "1                5093.0             True          False         1420.0   \n",
+      "2                5093.0             True          False         1420.0   \n",
+      "3                5093.0            False          False         1420.0   \n",
+      "4                5094.0            False           True         1421.0   \n",
+      "\n",
+      "  Vacancy.CumulativeMean  \n",
+      "0               2.151549  \n",
+      "1               2.151972  \n",
+      "2               2.151972  \n",
+      "3               2.151972  \n",
+      "4               2.150880  \n",
+      "\n",
+      "[5 rows x 23 columns]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "baseDir=\".\"\n",
     "ConvergenceFileBase=\"Convergence_Analysis_Data.chunk.\"\n",
     "convergenceFrameRate=1.0\n",
     "\n",
@@ -615,14 +673,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualize Convergence Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "127d36e721c24fb7b7ed0141c61d628e",
+       "model_id": "ffd66e612eb94a528603439f645f584b",
        "version_major": 2,
        "version_minor": 0
       },
