more bug fixes in ranking analysis

--- a/Convergence_Analysis.ipynb
+++ b/Convergence_Analysis.ipynb
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23aed3bd07ff4c50855b156e14e51678",
+       "model_id": "c51a22e0544c445bb33180310450d42f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -577,6 +577,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wbotellosmith/anaconda2/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2714: DtypeWarning: Columns (19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
     },
     {
      "name": "stdout",
@@ -625,10 +633,10 @@
     {
      "data": {
       "text/plain": [
-       "2366"
+       "0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +888,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,13 +908,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f46bb35e6a76403bbeef41dacfc85089",
+       "model_id": "ef70cd2fb00145ee828ee75737cdb48f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -972,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1115,7 @@
        "4                2.150880  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,9 +1411,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing ranking\n",
+      "merging data\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SimType</th>\n",
+       "      <th>Rep</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>ResID</th>\n",
+       "      <th>SeqID</th>\n",
+       "      <th>Occupancy.CumulativeMean</th>\n",
+       "      <th>Occupancy.CumulativeMean.Rank</th>\n",
+       "      <th>Vacancy.CumulativeMean.Rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3515</th>\n",
+       "      <td>AA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1419</td>\n",
+       "      <td>782</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3515</th>\n",
+       "      <td>AA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1419</td>\n",
+       "      <td>782</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3515</th>\n",
+       "      <td>AA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1419</td>\n",
+       "      <td>782</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3515</th>\n",
+       "      <td>AA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1419</td>\n",
+       "      <td>782</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3515</th>\n",
+       "      <td>AA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1419</td>\n",
+       "      <td>782</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     SimType  Rep  Time  ResID  SeqID  Occupancy.CumulativeMean  \\\n",
+       "3515      AA    0   0.0   1419    782                       0.0   \n",
+       "3515      AA    0   0.0   1419    782                       0.0   \n",
+       "3515      AA    0   0.0   1419    782                       0.0   \n",
+       "3515      AA    0   0.0   1419    782                       0.0   \n",
+       "3515      AA    0   0.0   1419    782                       0.0   \n",
+       "\n",
+       "      Occupancy.CumulativeMean.Rank  Vacancy.CumulativeMean.Rank  \n",
+       "3515                           74.0                         23.0  \n",
+       "3515                          102.0                         18.0  \n",
+       "3515                          107.0                         10.0  \n",
+       "3515                           79.0                         22.0  \n",
+       "3515                           39.0                         63.0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rankKeyCols=['SimType','Rep','Time']\n",
     "rankValueCols=['Occupancy.CumulativeMean','Vacancy.CumulativeMean']\n",
@@ -1413,10 +1541,11 @@
     "\n",
     "rankDataCols=np.concatenate([rankKeyCols,['ResID','SeqID'],rankValueCols])\n",
     "rankData=rankingData[rankDataCols]\n",
-    "\n",
+    "print 'computing ranking'\n",
     "rankFrame=rankData[rankFrameCols].groupby(rankKeyCols).rank(axis=1,ascending=False,method='dense')\n",
     "rankFrame.columns=rankFrame.columns.map(lambda x: x+'.Rank')\n",
-    "rankData=rankData[\n",
+    "print 'merging data'\n",
+    "rankData=rankData[rankData.SimType=='AA'][\n",
     "        ['SimType','Rep','Time','ResID','SeqID','Occupancy.CumulativeMean']\n",
     "    ].join(other=rankFrame).sort_values(['SeqID','Time','Rep','SimType'])\n",
     "rankData.head()"
